--- a/css/login.css
+++ b/css/login.css
@@ -1,13 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
-@import "reset.css";
-@import "variables.css";
-@import "status-bar.css";
-@import "login.css";
-
-body {
-  font-family: "Open Sans", sans-serif;
-}
-
 .welcome-header {
   margin: 90px 0px;
   text-align: center;
@@ -34,8 +24,11 @@ body {
   border: none;
   padding: 15px 0px;
   font-size: 18px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: 25px;
+}
+
+#login-form input:not([type="submit"]) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   transition: border-color 0.3s ease-in-out;
 }
 
@@ -45,4 +38,18 @@ body {
 
 #login-form input:focus {
   border-color: var(--yellow);
+}
+
+#login-form input[type="submit"] {
+  background-color: var(--yellow);
+  cursor: pointer;
+  padding: 20px 0px;
+  border-radius: 5px;
+}
+
+#login-form a {
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  font-size: 13px;
 }
