--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
 @import "screen-header.css";
 @import "friends.css";
 @import "user-component.css";
+@import "badge.css";
+
 
 body {
   font-family: "Open Sans", sans-serif;
